k8s/fullcycle/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  containers:
  - name: goserver
    image: maicondev/hello-go
