k8s/fullcycle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: goserver.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goserver-service
                servicePort: 80
  tls:
    - hosts:
        - goserver.com
      secretName: certificate-secret
